src/objects/Music_Favorite_Blacklist__c.object
<CustomObject>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>IF( CreatedById = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Favourite_Blacklist__c</fullName>
        <label>Favourite Blacklist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Object__c</fullName>
        <label>Type Of Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Music Favorite Blacklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Favourite_Blacklist__c</columns>
        <columns>Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type_Of_Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Music Favorite Blacklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Favorite Blacklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>